Bug 119756 - A lag on file opening since LibO 6.2 with sidebar enabled
Summary: A lag on file opening since LibO 6.2 with sidebar enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, perf, regression
Depends on:
Blocks:
 
Reported: 2018-09-08 11:47 UTC by Telesto
Modified: 2018-10-10 11:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (14.19 KB, application/vnd.oasis.opendocument.text)
2018-09-08 11:47 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-09-08 11:47:36 UTC
Description:
A lag on file opening since LibO 6.2 with sidebar enabled

Steps to Reproduce:
1. Open the attached file (with sidebar & enabled)
2. Press CTRL+A
3. File -> Reload (monitor time taken until the selection disappears) (2 seconds or so)


Actual Results:
2 seconds delay

Expected Results:
Nearly no delay (as in LibO6.1)


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.0.0.alpha0+
Build ID: 22f49d10c001f9d62e3783872bc7e53a902265a3
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-09-08_03:56:10
Locale: en-US (nl_NL); Calc: CL
Comment 1 Telesto 2018-09-08 11:47:53 UTC
Created attachment 144751 [details]
Example file
Comment 2 Oliver Brinzing 2018-09-08 13:42:37 UTC
i can confirm a delay compared to lo 6.1.1, but maybe caused by my debug build:

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 2a73c9e04ba9379c0561a7e8d531b5633c46ec52
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: de-DE (de_DE); Calc: threaded
Comment 3 Telesto 2018-09-08 13:49:45 UTC
No repro with
Version: 6.2.0.0.alpha0+
Build ID: fc5ab21dd326c28486e9cb668c50f417ab4455ee
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 4 Xisco Faulí 2018-09-10 09:12:34 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7cb3e475f2fb0162c7290414509de4fb8fe57e30

author  Jan-Marek Glogowski <glogow@fbihome.de> 2018-09-06 14:04:25 +0200
committer       Jan-Marek Glogowski <glogow@fbihome.de> 2018-09-07 20:27:01
+0200
commit  7cb3e475f2fb0162c7290414509de4fb8fe57e30 (patch)
tree    ecd3e4dedd2c171991700a4294c410d17782179c
parent  334df91c6e464fe6434500f63e2fb12438722845 (diff)
WIN add SalGraphics* to WinFontInstance

Bisected with: bibisect-win32-6.2

Adding Cc: to Jan-Marek Glogowski
Comment 5 Commit Notification 2018-09-11 14:10:34 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ee177e58a57420eaa18b9d39ade4c28907bc0c8

tdf#119756 assume the HFONT is always valid

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Buovjaga 2018-09-24 07:02:51 UTC
Telesto: is the delay gone now after the previous commit?
Comment 7 Telesto 2018-09-24 09:22:47 UTC
(In reply to Buovjaga from comment #6)
> Telesto: is the delay gone now after the previous commit?

Yes, no repro with
Version: 6.2.0.0.alpha0+
Build ID: 7d242f3bd7277236046f90d3f32b9792fd8ea97b
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-09-18_23:43:19
Locale: nl-NL (nl_NL); Calc: CL
Comment 8 Telesto 2018-10-03 17:58:11 UTC
@Jan-Marek
Please change the status to RESOLVED FIXED
Comment 9 Xisco Faulí 2018-10-08 11:33:21 UTC
(In reply to Telesto from comment #8)
> @Jan-Marek
> Please change the status to RESOLVED FIXED

Hi Telesto,
Would you mind verifying this issue in master?
Comment 10 Xisco Faulí 2018-10-10 11:27:16 UTC
*** Bug 120448 has been marked as a duplicate of this bug. ***